Updating the ocis migrate rebuild-jsoncs3-indexes command

--- a/modules/ROOT/pages/maintenance/commands/rebuild-jsoncs3-indexes.adoc
+++ b/modules/ROOT/pages/maintenance/commands/rebuild-jsoncs3-indexes.adoc
@@ -1,6 +1,12 @@
 = Rebuild jsoncs3 Indexes
 
-WARNING: Use this command with absolute care. It is not intended to play around and should only be used on request and under supervision of ownCloud support. 
+WARNING: Use this command with absolute care. It is not intended to play around and should only be used on request and under supervision of ownCloud support.
+
+* Note, run this comand only if there are shares present.
+* If you run this command and no shares are present, an error will be printed like the following: +
+`error: not found: list container: error: not found: jsoncs3-share-manager-metadata/storages` +
+This error has no impact and can be neglected.
+
 
 [source,bash]
 ----
