--- a/modules/ROOT/pages/migration/upgrading_3.0.0_4.0.0.adoc
+++ b/modules/ROOT/pages/migration/upgrading_3.0.0_4.0.0.adoc
@@ -103,7 +103,7 @@ Depending on the number of steps to process, you will see an output like the fol
 . Run the "repair and migrate jsoncs3 indexes" command:
 +
 --
-* Note, run this comand only if there are shares present.
+* Note, run this command only if there are shares present.
 * If you run this command and no shares are present, an error will be printed like the following: +
 `error: not found: list container: error: not found: jsoncs3-share-manager-metadata/storages` +
 This error has no impact and can be neglected.
