Add "Restrict Username Patterns"

--- a/modules/ROOT/pages/deployment/services/s-list/graph.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/graph.adoc
@@ -14,6 +14,22 @@
 
 * Graph listens on port 9120 by default.
 
+== Restrict Username Patterns
+
+Usernames can be restricted to follow certain patterns. Such patterns can be neccessary when using the xref:{s-path}/idm.adoc[internal IDM] like to align with local Unix username restrictions. Username restrictions can also be handled with the external IDM like Keycloak. The environment variable `GRAPH_USERNAME_MATCH` can be set to the following values to define where and how these restriction are handled:
+
+* `none` +
+There is no internal username checking. Restrictions, if any, are defined in the _external_ IDM like Keycloak.
+
+* `default` +
+Usernames are restricted by following criterias:
+** ASCII standard charset, no UTF-8
+** The username _must_ start with either
+*** an `_` (underscore) or
+*** a letter where there is no distinction between lower- and uppercase.
+** More characters from the ASCII charset including numbers, aligning to the Unix user namespace. 
+** optionally an `@` character followed by a domain name 
+
 == Manual Filters
 
 Using the API, you can manually filter like for users. See the https://owncloud.dev/libre-graph-api/#/users/ListUsers[Libre Graph API] for examples in the https://owncloud.dev[developer documentation]. Note that you can use `and` and `or` to refine results.
