--- a/modules/ROOT/pages/deployment/services/s-list/ocs.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/ocs.adoc
@@ -1,6 +1,6 @@
 = OCS Service Configuration
 :toc: right
-:description: The Infinite Scale OCS service (open collaboration services) serves one purpose: it has an endpoint for signing keys which the web frontend accesses when uploading data.
+:description: The Infinite Scale OCS service (open collaboration services) serves mainly one purpose: it has an endpoint for signing keys which the web frontend accesses when uploading data.
 
 :service_name: ocs
 
