--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/_kube-versions-tab-1.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/_kube-versions-tab-1.adoc
@@ -1,4 +1,4 @@
-We only list non EOL versions as of the Chart release date from here: https://kubernetes.io/releases/[window=_blank]
+We only list non EOL versions as of the chart release date from here: https://kubernetes.io/releases/[window=_blank]
 
 Note that some EOL versions still might be API compatible.
 
