--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/_kube-versions-tab-3.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/_kube-versions-tab-3.adoc
@@ -7,9 +7,11 @@
 |===
 | Version
 a| [subs=-attributes]
-+~1.25.0+
++~1.27.0-0+
 a| [subs=-attributes]
-+~1.24.0+
++~1.26.0-0+
 a| [subs=-attributes]
-+~1.23.0+
++~1.25.0-0+
+a| [subs=-attributes]
++~1.24.0-0+
 |===
