--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
@@ -17,34 +17,43 @@ For each breaking changes block you need:
 
 {description}
 
- [id=0.5.0]
+[id=0.5.0]
 == Helm Chart Version: 0.5.0
 
-When upgrading from Helm Chart 0.4.0 you will be performing a upgrade from oCIS 3.0.0 to oCIS 4.0.1. This upgrade will perform some migrations, please see also https://doc.owncloud.com/ocis/next/migration/upgrading_3.0.0_4.0.0.html.
+When upgrading from Helm Chart 0.4.0 to 0.5.0, you will be performing a upgrade from Infinite Scale 3.0.0 to 4.0.1. This upgrade will perform some migrations, please also see xref:migration/upgrading_3.0.0_4.0.0.adoc[Upgrading from 3.0.0 to 4.0.0] for more details.
 
-For the Helm Chart, we recommend you to:
-- delete the Ingress object
+* Backup Infinite Scale as described in the xref:maintenance/b-r/backup.adoc[backup documentation].
 
-You can check the migration progress by running:
-`kubectl -n ocis delete ingress/proxy`
-Caution: this will make the oCIS installation be unavailable for your users. Depending on your Kubernetes Ingress Controller, your users will see different error pages.
-Deleting the Ingress object justs ensures, that nobody of your users will use oCIS while migrations are happening.
+* For the Helm Chart, we recommend you to:
+** Delete the Ingress object
++
+--
+[source,bash]
+----
+kubectl -n ocis delete ingress/proxy
+----
 
-Backup oCIS now.
+IMPORTANT: This command will make the Infinite Scale installation unavailable for users. Depending on your Kubernetes Ingress Controller, users will see different error pages. Deleting the Ingress object just ensures that nobody of your users can access Infinite Scale during the migration processes.
+--
 
-Now you can install oCIS Chart version 0.5.0 with the `ingress.enabled` setting, set to `false`.
+* Install Infinite Scale Chart version 0.5.0 with the `ingress.enabled` setting set to `false`, see xref:deployment/container/orchestration/orchestration.adoc#deploy-the-chart[Deploy the Chart] and xref:deployment/container/orchestration/orchestration.adoc#apply-chart-changes[Apply Chart Changes].
+* With Infinite Scale started using the new Helm Chart version, monitor the migration status for the storage-users and storage-system service by running these commands:
++
+--
+[source,bash]
+----
+kubectl -n <ocis-namespace> exec svc/storageusers -- ocis migrate decomposedfs -r /var/lib/ocis/storage/users list
+----
 
-You now can monitor the migration status for the storage-users and storage-system service by running these commands:
+[source,bash]
+----
+kubectl -n <ocis-namespace> exec svc/storagesystem -- ocis migrate decomposedfs -r /var/lib/ocis/storage/metadata list
+----
+--
+* If all migration steps of both services show the state `succeeded`, migrations have finished.
+* You can now set the `ingress.enabled` setting to `true` and deploy the Helm Chart as usual.
 
-`kubectl -n <ocis-namespace> exec svc/storageusers -- ocis migrate decomposedfs -r /var/lib/ocis/storage/users list`
-
-`kubectl -n <ocis-namespace> exec svc/storagesystem -- ocis migrate decomposedfs -r /var/lib/ocis/storage/metadata list`
-
-If all migrations of both services show state `succeeded`, the migrations are finished.
-
-You now can install the oCIS Chart version 0.5.0 with the `ingress.enabled` setting, set to `true`.
-
-Users now should be able to access oCIS again.
+Users should now be able to access Infinite Scale again.
 
 [id=0.4.0]
 == Helm Chart Version: 0.4.0
