--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
@@ -22,10 +22,10 @@ For each breaking changes block you need:
 
 When upgrading from Helm Chart 0.4.0 to 0.5.0, you will be performing a upgrade from Infinite Scale 3.0.0 to 4.0.1. This upgrade will perform some migrations, please also see xref:migration/upgrading_3.0.0_4.0.0.adoc[Upgrading from 3.0.0 to 4.0.0] for more details.
 
-* Backup Infinite Scale as described in the xref:maintenance/b-r/backup.adoc[backup documentation].
+* Back up Infinite Scale as described in the xref:maintenance/b-r/backup.adoc[backup documentation].
 
-* For the Helm Chart, we recommend you to:
-** Delete the Ingress object
+* For the Helm Chart, we recommend to:
+** delete the Ingress object
 +
 --
 [source,bash]
@@ -33,11 +33,11 @@ When upgrading from Helm Chart 0.4.0 to 0.5.0, you will be performing a upgrade 
 kubectl -n ocis delete ingress/proxy
 ----
 
-IMPORTANT: This command will make the Infinite Scale installation unavailable for users. Depending on your Kubernetes Ingress Controller, users will see different error pages. Deleting the Ingress object just ensures that nobody of your users can access Infinite Scale during the migration processes.
+IMPORTANT: This command will make the Infinite Scale installation unavailable for users. Depending on your Kubernetes Ingress Controller, users will see different error pages. Deleting the Ingress object just ensures that none of your users can access Infinite Scale during the migration processes.
 --
 
-* Install Infinite Scale Chart version 0.5.0 with the `ingress.enabled` setting set to `false`, see xref:deployment/container/orchestration/orchestration.adoc#deploy-the-chart[Deploy the Chart] and xref:deployment/container/orchestration/orchestration.adoc#apply-chart-changes[Apply Chart Changes].
-* With Infinite Scale started using the new Helm Chart version, monitor the migration status for the storage-users and storage-system service by running these commands:
+* Install Infinite Scale chart version 0.5.0 with the `ingress.enabled` setting set to `false`, see xref:deployment/container/orchestration/orchestration.adoc#deploy-the-chart[Deploy the Chart] and xref:deployment/container/orchestration/orchestration.adoc#apply-chart-changes[Apply Chart Changes].
+* With Infinite Scale started using the new Helm chart version, monitor the migration status for the storage-users and storage-system service by running these commands:
 +
 --
 [source,bash]
@@ -51,7 +51,7 @@ kubectl -n <ocis-namespace> exec svc/storagesystem -- ocis migrate decomposedfs 
 ----
 --
 * If all migration steps of both services show the state `succeeded`, migrations have finished.
-* You can now set the `ingress.enabled` setting to `true` and deploy the Helm Chart as usual.
+* You can now set the `ingress.enabled` setting to `true` and deploy the Helm chart as usual.
 
 Users should now be able to access Infinite Scale again.
 
