--- a/modules/ROOT/pages/deployment/services/ports-used.adoc
+++ b/modules/ROOT/pages/deployment/services/ports-used.adoc
@@ -42,10 +42,11 @@ The following port ranges are used by services:
 | 9180-9184  | FREE
 | 9185-9189  | xref:{s-path}/thumbnails.adoc[thumbnails]
 | 9190-9194  | xref:{s-path}/settings.adoc[settings]
-| 9195-9199  | FREE
+| 9195-9197  | FREE
+| 9198-9199  | xref:{s-path}/auth-service.adoc[auth-service]
 | 9200-9204  | xref:{s-path}/proxy.adoc[proxy]
 | 9205-9209  | xref:{s-path}/proxy.adoc[proxy]
-| 9210-9214  | FREE
+| 9210-9214  | xref:{s-path}/userlog.adoc[userlog]
 | 9215-9219  | xref:{s-path}/storage-system.adoc[storage-system]
 | 9220-9224  | xref:{s-path}/search.adoc[search]
 | 9225-9229  | FREE
