--- a/modules/ROOT/partials/deployment/services/auth-service-family.adoc
+++ b/modules/ROOT/partials/deployment/services/auth-service-family.adoc
@@ -1,6 +1,6 @@
 == The `auth` Service Family
 
-Infinite Scale uses serveral authentication services for different use cases. All services that start with `auth-` are part of the authentication service family. Each member authenticates requests with different scopes.
+Infinite Scale uses several authentication services for different use cases. All services that start with `auth-` are part of the authentication service family. Each member authenticates requests with different scopes.
 
 {empty} +
 
