--- a/modules/ROOT/pages/deployment/services/s-list/eventhistory.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/eventhistory.adoc
@@ -8,6 +8,10 @@
 
 {description} 
 
+== Default Values
+
+* The Eventhistory Service listens on port 9174 by default.
+
 == Prerequisites
 
 Running the `eventhistory` service without an event system like NATS is not possible.
