--- a/modules/ROOT/pages/deployment/services/s-list/store.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/store.adoc
@@ -12,7 +12,7 @@
 
 == Default Values
 
-* The Store service listens on port 9460 by default.
+* The store service listens on port 9460 by default.
 
 == Configuration
 
