--- a/modules/ROOT/pages/deployment/services/s-list/sse.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/sse.adoc
@@ -1,15 +1,15 @@
-= SSE (Server Sent Events) Configuration
+= SSE (Server-Sent Events) Configuration
 :toc: right
 
 :service_name: sse
 :no_second_tab: true
 //:no_third_tab: true
 
-:description: The Infinite Scale sse service is responsible for sending sse (Server-Sent Events) to a user.
+:description: The Infinite Scale sse service is responsible for sending sse (server-sent events) to a user.
 
 == Introduction
 
-{description} See https://medium.com/yemeksepeti-teknoloji/what-is-server-sent-events-sse-and-how-to-implement-it-904938bffd73[What is Server-Sent Events] for a simple introduction and examples of server sent events.
+{description} See https://medium.com/yemeksepeti-teknoloji/what-is-server-sent-events-sse-and-how-to-implement-it-904938bffd73[What is Server-Sent Events...?] for a simple introduction and examples of server-sent events.
 
 == Default Values
 
@@ -19,7 +19,7 @@ include::partial$deployment/services/log-service-ecosystem.adoc[]
 
 == Subscribing
 
-Clients can subscribe to the `/sse` endpoint to be informed by the server when an event happens. The `sse` endpoint will respect language changes of the user without needing to reconnect. Note that SSE has a limitation of six open connections per browser which can be reached if one has opened various tabs of the Web UI pointing to the same Infinite Scale instance.
+Clients can subscribe to the `/sse` endpoint to be informed by the server when an event happens. The `sse` endpoint will respect language changes of the user without needing to reconnect. Note that sse has a limitation of six open connections per browser which can be reached if one has opened various tabs of the Web UI pointing to the same Infinite Scale instance.
 
 == Configuration
 
