--- a/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
@@ -48,7 +48,7 @@ The `frontend` service contains an eventhandler for handling `ocs` related event
 
 When setting the `FRONTEND_AUTO_ACCEPT_SHARES` to `true`, all incoming shares will be accepted automatically. Users can overwrite this setting individually in their profile.
 
-== The password policy
+== The Password Policy
 
 Note that the password policy currently impacts only *public link password validation*.
 
@@ -58,7 +58,7 @@ Generally, a password can contain any UTF-8 characters, however some characters 
 
 The validation against the banned passwords list can be configured via a text file with words separated by new lines. If a user tries to set a password listed in the banned passwords list, the password can not be used (is invalid) even if the other mandatory criteria are passed. The admin can define the path of the banned passwords list file. If the file doesn't exist in a location, Infinite Scale tries to load a file from the `OCIS_CONFIG_DIR/FRONTEND_PASSWORD_POLICY_BANNED_PASSWORDS_LIST`. An option will be enabled when the file has been loaded successfully.
 
-Following environment variables can be set to define the password policy behaviour:
+The following environment variables can be set to define the password policy behavior:
 
 * `FRONTEND_PASSWORD_POLICY_MIN_CHARACTERS` +
 Define the minimum password length.
